<resources>
    <string name="app_name">Big Screen Cinema</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="see_more_movies">See More Movies</string>
    <string name="maps_and_directions">Maps and Directions</string>
    <string name="more_information">More Information</string>
    <string name="screenings_and_tickets">Screenings and Tickets</string>
    <string name="welcome">Welcome </string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="explore_featured_movies">Explore Featured Movies</string>
    <string name="select_screening">Select Screening</string>
    <string name="select_number_of_adult_tickets_14">Select Number of Adult Tickets (14+)</string>
    <string name="select_number_of_child_tickets">Select Number of Child Tickets</string>
    <string name="prices">Prices</string>
    <string name="child">Child:</string>
    <string name="adult_14">Adult (14+)</string>
    <string name="select_number_of_adult_tickets">Select Number of Adult Tickets</string>
    <string name="total">Total:</string>
    <string name="confirm">Confirm</string>
    <string name="_0_00">£0.00</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="movie">Movie:</string>
    <string name="number_tickets_adult">Tickets (Adult 14+):</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tickets_child">Tickets (Child):</string>
    <string name="ticket_options">Ticket Options</string>
    <string name="checkout">Checkout</string>
    <string name="total_amount_to_pay">Total to pay:</string>
    <string name="card_number">Card Number</string>
    <string name="cvs">CVS</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="save_card_for_future_purchases">Save card for future purchases</string>
    <string name="saved_card">Saved card</string>
    <string name="new_card">New card</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_details">Card Details</string>
    <string name="cards">Cards</string>
    <string name="select_card">Select Card</string>
    <string name="purchase">Purchase</string>
    <string name="name_on_card">Name on Card</string>
    <string name="postal_code">Postcode</string>
    <string name="cardholder_information">Cardholder Information</string>
    <string name="big_screen_cinema">Big Screen Cinema</string>
    <string name="purchase_complete">Purchase Complete</string>
    <string name="home">Home</string>
    <string name="child_x">Child x</string>
    <string name="adult_x">Adult x</string>
    <string name="my_bookings">My Bookings</string>
</resources>