<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title_screenings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    </TextView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prices" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child" />

        <TextView
            android:id="@+id/text_price_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult_14" />

        <TextView
            android:id="@+id/text_price_adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_screening" />

        <Spinner
            android:id="@+id/select_screening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_number_of_adult_tickets" />

        <EditText
            android:id="@+id/input_num_adults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:imeActionId="@integer/material_motion_duration_long_2"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_number_of_child_tickets" />

        <EditText
            android:id="@+id/input_num_children"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:imeActionId="@integer/material_motion_duration_long_2"
             />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/screening_confirm"
        android:layout_gravity="center"
        android:text="@string/confirm" />


</androidx.appcompat.widget.LinearLayoutCompat>